--- a/css/estilos.css
+++ b/css/estilos.css
@@ -119,7 +119,7 @@ box-shadow: inset 0px 32px 42px -28px rgba(0,0,0,0.75);
 
 .main {
     background-color: #444C5C;
-    /*background-image: url("../imgs/bg.jpg");*/
+    background-image: url("../imgs/bg.jpg");
     color: #FFFFFF;
     float: none;
     margin-top: -134px;
@@ -165,6 +165,10 @@ box-shadow: inset 0px 32px 42px -28px rgba(0,0,0,0.75);
 .margen-interlineado {
     margin-top: 1em;
     margin-bottom: 2em;
+}
+
+.margen-correo {
+    margin-left: 7.2%;
 }
 
 .img-centro {
@@ -249,7 +253,7 @@ box-shadow: inset 0px 32px 42px -28px rgba(0,0,0,0.75);
 }
 
 .se-azul {
-    color: #08c;
+    color: #029BE8;
 }
 
 .sin-decoracion {
